All resources editable - untested
