# api/v1/routes.js
@@ -25,6 +25,13 @@ router.route('/seasons/:seasonId/competitions/:competitionId/fixtures/:fixtureId
   .get(seasons.seasonsSeasonIdCompetitionsCompetitionIdFixturesFixtureIdGet)
   .put(seasons.seasonsSeasonIdCompetitionsCompetitionIdFixturesFixtureIdPut)
   .delete(seasons.seasonsSeasonIdCompetitionsCompetitionIdFixturesFixtureIdDelete)
+router.route('/seasons/:seasonId/competitions/:competitionId/fixtures/:fixtureId/matches')
+  .get(seasons.seasonsSeasonIdCompetitionsCompetitionIdFixturesFixtureIdMatchesGet)
+  .post(seasons.seasonsSeasonIdCompetitionsCompetitionIdFixturesFixtureIdMatchesPost)
+router.route('/seasons/:seasonId/competitions/:competitionId/fixtures/:fixtureId/matches/:matchId')
+  .get(seasons.seasonsSeasonIdCompetitionsCompetitionIdFixturesFixtureIdMatchesMatchIdGet)
+  .put(seasons.seasonsSeasonIdCompetitionsCompetitionIdFixturesFixtureIdMatchesMatchIdPut)
+  .delete(seasons.seasonsSeasonIdCompetitionsCompetitionIdFixturesFixtureIdMatchesMatchIdDelete)
 router.route('/seasons/:seasonId/competitions/:competitionId/teams')
   .get(seasons.seasonsSeasonIdCompetitionsCompetitionIdTeamsGet)
   .post(seasons.seasonsSeasonIdCompetitionsCompetitionIdTeamsPost)
